# pyproject.toml
[tool.poetry]
name = "test_module1"
version = "0.1.0"
description = "Test module 1"
authors = ["test <test@example.com>"]
packages = [
    { include = "test_module1", from = "." },
]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
numpy = "2.2.2"
pydantic = "^2.6.1"
naptha-sdk = {git = "https://github.com/NapthaAI/naptha-sdk.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"